--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container" id="root">
             <div class="slider-wrapper">
                 <div class="prev">
-                    <i class="fas fa-angle-left" @click="scorreIndietro"></i>
+                    <i class="fas fa-angle-left" @click="scorreIndietro" ></i>
                 </div>
                 <div class="images">
                     <img :src="path + images[counter]" alt="">
@@ -22,8 +22,9 @@
                     <i class="fas fa-angle-right" @click= "scorreAvanti"></i>
                 </div>
                 <div class="nav">
-                    <i class="fas fa-circle" :class="(index == counter) ?  'active' : null" v-for= "(circle, index) in images.length"></i>
+                    <i class="fas fa-circle" :class="(index == counter) ?  'active' : null" v-for= "(circle, index) in images.length" @click="counter=index"></i>
                 </div>
+                
             </div>
         </div>
         <script src="main.js"></script>
